# UnderBridge-ROS

./: .gitignore  README.md
shfiles/: camera.sh  mavros.sh  rspx4.sh  rviz.sh  sys.sh  vins.sh
shfiles_ego/: catkin_make.sh  ego.sh  imu_freq.sh  reboot_fcu.sh  record.sh  run.sh
shfiles_elastic/: 1run_in_sim.sh
src/insp_msgs/: CMakeLists.txt  package.xml
src/insp_msgs/include/insp_msgs/: msg_tran.h
src/insp_msgs/include/visualization/: visualization.hpp
src/insp_msgs/msg/: DebugFlight.msg  DebugMaster.msg  DebugVision.msg  PtCloudKey.msg  StageMode.msg  TrackIndex.msg
src/insp_msgs/src/: msg_tran.cpp
src/insp_msgs/srv/: EmergencyTerminate.srv  FlightTaskControl.srv  FootPointCorrect.srv  OccupyCheck.srv  SetStageMode.srv
src/planner/bspline_opt/src/: uniform_bspline.cpp
src/planner/plan_manage/launch/: advanced_param_exp.xml  default.rviz  single_run_in_exp.launch  single_run_in_sim.launch
src/realflight_modules/VINS-Fusion/config/: fast_drone_250.yaml  left.yaml
src/realflight_modules/px4ctrl/config/: ctrl_param_fpv.yaml
src/realflight_modules/px4ctrl/src/: controller.cpp
src/realflight_modules/realsense-ros/realsense2_camera/: CMakeLists.txt
src/uav_simulator/mockamap/include/: maps.hpp
src/uav_simulator/mockamap/src/: maps.cpp  mockamap.cpp
src/uav_simulator/so3_control/src/: so3_control_nodelet.cpp
src/wind_turbine_insp/: CMakeLists.txt  package.xml
src/wind_turbine_insp/include/wind_turbine_insp/: convert_pipe_node.h  flight_node.h  master_node.h  record_node.h  sensing_node.h  vision_node.h
src/wind_turbine_insp/launch/: flight_node.launch  master_node.launch  px4_gz_mavros.launch  record_node.launch  rviz.launch  sensing_node.launch  vision_node.launch
src/wind_turbine_insp/rviz/: wind_turbine_insp.rviz
src/wind_turbine_insp/sh/: run.sh
src/wind_turbine_insp/sitl_gazebo/models/bridge/: bridge.sdf  model.config
src/wind_turbine_insp/sitl_gazebo/models/typhoon_h480/: typhoon_h480.sdf
src/wind_turbine_insp/sitl_gazebo/worlds/: wind_farm.world
src/wind_turbine_insp/src/: convert_pipe_node.cpp  convert_pipe_recv_test  convert_pipe_recv_test.cpp  flight_node.cpp  master_node.cpp  mop_node.cpp  record_node.cpp  sensing_node.cpp  testtt_node.cpp  vision_node.cpp
vins_output/: bias.txt  extrinsic_parameter.txt
