<?xml version="1.0"?>
<package format="2">
  <name>insp_msgs</name>
  <version>0.0.0</version>
  <description>The insp_msgs package</description>

  <maintainer email="hilab@todo.todo">hilab</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>mavros_msgs</depend>

</package>
