<?xml version="1.0"?>
<package format="2">
  <name>wind_turbine_insp</name>
  <version>0.0.0</version>
  <description>The wind_turbine_insp package</description>

  <maintainer email="hilab_shiych8@todo.todo">hilab_shiych8</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>mavros_msgs</depend>

  <depend>insp_msgs</depend>
  <depend>traj_utils</depend>
  <depend>px4_ctrl</depend>

</package>
